src/objects/QualityAssurance__c.object
<CustomObject>
    <description>Custom object used for the Registrar Office Quality Assurance processes and reporting.</description>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for WGU user.</description>
        <label>Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QualityAssurance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AverageTurnAroundTime__c</fullName>
        <description>Calculated average of the turn around time for cases, student processes, or transcript evaluations performed in the month of the audit.</description>
        <formula>SumOfTurnAroundTime__c / CountForTurnAroundTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Turn Around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to case object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quality Assurance</relationshipLabel>
        <relationshipName>QualityAssurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CauseOfError__c</fullName>
        <label>Cause of Error</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Misunderstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micommunication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Clarity in Policy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CorrectiveAction__c</fullName>
        <description>Open text field that allows the user to indicate what, if any, corrective action has been taken.</description>
        <label>Corrective Action</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CountForTurnAroundTime__c</fullName>
        <description>Rollup summary field that counts the turn around time from the quality assurance audits object.</description>
        <label>Count for Turn Around Time</label>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DateOfAuditCopy__c</fullName>
        <description>Date field used in the background for the utility class that finds cases, student processes, or transcript evaluations performed by the employee in the month range selected.</description>
        <formula>TEXT(YEAR(MonthOfAudit__c)) + &quot;-&quot; + 
IF(MONTH(MonthOfAudit__c)&lt;10,
&quot;0&quot;+TEXT(MONTH(MonthOfAudit__c)),
TEXT(MONTH(MonthOfAudit__c))) + &quot;-&quot; + 
IF(
DAY(MonthOfAudit__c)&lt;10,
&quot;0&quot;+TEXT(DAY(MonthOfAudit__c)),
TEXT(DAY(MonthOfAudit__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Audit (System)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateOfAudit__c</fullName>
        <description>Date field that allows a user to select the date in which the audit took place.</description>
        <label>Date of Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to a WGU employee</description>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QualityAssurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExplanationOfAudit__c</fullName>
        <description>Open text field that allows the auditor to comment on the results of the full QA audit.</description>
        <label>Explanation of Audit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerTeamLeadNotes__c</fullName>
        <description>Text field that allows the manager or team lead to make notes as to the outcome of their review.</description>
        <label>Manager/Team Lead Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagerTeamLeadReviewStatus__c</fullName>
        <description>Picklist field that displays the status of the employee audit review by the manager or team lead.</description>
        <label>Manager/Team Lead Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ManagerTeamLeadReviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the user who is performing the manager or team lead review.</description>
        <label>Manager/Team Lead Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QualityAssurance3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManagerTeamLeadReviewedOn__c</fullName>
        <description>Date field that indicates when the audit was reviewed by the employees manager or team lead.</description>
        <label>Manager/Team Lead Reviewed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MonthOfAudit__c</fullName>
        <description>Date field that allows the user to select the date of the month that the audit time period begins with.  This field is key in linking the transfer evaluations, cases, and student processes the employee completed.</description>
        <label>Month of Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfSystemErrors__c</fullName>
        <description>A count of the number of System errors reported based on the quality assurance audit results for the given time period.</description>
        <label>Number of System Errors</label>
        <summaryFilterItems>
            <field>QualityAssuranceAudit__c.SystemError__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </summaryFilterItems>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofBestPracticeErrors__c</fullName>
        <description>A count of the number of Best Practice errors reported based on the quality assurance audit results for the given time period.</description>
        <label>Number of Best Practice Errors</label>
        <summaryFilterItems>
            <field>QualityAssuranceAudit__c.BestPracticeError__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </summaryFilterItems>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofHighStakeErrors__c</fullName>
        <description>A count of the number of High Stake errors reported based on the quality assurance audit results for the given time period.</description>
        <label>Number of High Stake Errors</label>
        <summaryFilterItems>
            <field>QualityAssuranceAudit__c.HighStakeError__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </summaryFilterItems>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofSRMErrors__c</fullName>
        <description>A count of the number of SRM errors reported based on the quality assurance audit results for the given time period.</description>
        <label>Number of SRM Errors</label>
        <summaryFilterItems>
            <field>QualityAssuranceAudit__c.SRMError__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </summaryFilterItems>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PercentageOfSystemErrors__c</fullName>
        <description>A calculated field that divides the number of system errors by total number of audits performed for the month.</description>
        <formula>NumberOfSystemErrors__c / TotalNumberOfAudits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of System Errors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentageofBestPracticeErrors__c</fullName>
        <description>A calculated field that divides the number of best practice errors by total number of audits performed for the month.</description>
        <formula>NumberofBestPracticeErrors__c / TotalNumberOfAudits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of Best Practice Errors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentageofHighStakeErrors__c</fullName>
        <description>A calculated field that divides the number of high stake errors by the total number of audits performed for the month.</description>
        <formula>NumberofHighStakeErrors__c / TotalNumberOfAudits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of High Stake Errors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentageofSRMErrors__c</fullName>
        <description>A calculated field that divides the number of SRM errors by the total number of audits performed for the month.</description>
        <formula>NumberofSRMErrors__c / TotalNumberOfAudits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of SRM Errors</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QualityAssuranceURL__c</fullName>
        <description>Displays the URL link to the quality assurance record - for use in email templates.</description>
        <formula>HYPERLINK( &quot;https://srm.my.salesforce.com/&quot; + Id , &quot;https://srm.my.salesforce.com/&quot; + Id )</formula>
        <label>Quality Assurance URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist field that will indicate the current status of the quality assurance.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager/Team Lead Review Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the student process object</description>
        <label>Student Process</label>
        <referenceTo>StudentProcess__c</referenceTo>
        <relationshipLabel>Quality Assurance</relationshipLabel>
        <relationshipName>QualityAssurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Open text field that will allow the user to enter in a subject or name of the quality assurance audit.  Used for email templates, reporting, and list views.</description>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumOfTurnAroundTime__c</fullName>
        <description>Roll up summary that adds up the turn around time.</description>
        <label>Sum of Turn Around Time</label>
        <summarizedField>QualityAssuranceAudit__c.TurnAroundTime__c</summarizedField>
        <summaryForeignKey>QualityAssuranceAudit__c.QualityAssurance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TeamAssignedTo__c</fullName>
        <description>Picklist field that allows a user to select which team the employee was assigned to during the time period of the audit.</description>
        <label>Team Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Articulation Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Records Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College of Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICR/EOTs (Incomplete Course Request/End of Term Submissions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT3s (Less Than 3 CU appeals)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail / Indexing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Readmissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Break</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGU Transcript</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal/Rescissions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalNumberOfAudits__c</fullName>
        <description>Number field that indicates the total number of audits performed for the given time period.</description>
        <label>Total Number of Audits</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TransferEvaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the transfer evaluation object</description>
        <label>Transfer Evaluation</label>
        <referenceTo>TransferEvaluation__c</referenceTo>
        <relationshipLabel>Quality Assurance</relationshipLabel>
        <relationshipName>QualityAssurance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quality Assurance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Auditor__c</columns>
        <columns>DateOfAudit__c</columns>
        <columns>Employee__c</columns>
        <columns>MonthOfAudit__c</columns>
        <columns>TotalNumberOfAudits__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QAComplete</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Employee__c</columns>
        <columns>MonthOfAudit__c</columns>
        <columns>TotalNumberOfAudits__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>QA - Complete</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QAInProgress</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Employee__c</columns>
        <columns>MonthOfAudit__c</columns>
        <columns>TotalNumberOfAudits__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>QA - In Progress</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QAManagerReviewNeeded</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Employee__c</columns>
        <columns>MonthOfAudit__c</columns>
        <columns>TotalNumberOfAudits__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Manager/Team Lead Review Needed</value>
        </filters>
        <label>QA - Manager Review Needed</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>QARequested</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Employee__c</columns>
        <columns>MonthOfAudit__c</columns>
        <columns>TotalNumberOfAudits__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <label>QA - Requested</label>
        <sharedTo>
            <roleAndSubordinatesInternal>AssistantRegistrar</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QA-{00000}</displayFormat>
        <label>Quality Assurance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance</pluralLabel>
    <recordTypes>
        <fullName>StudentRecords</fullName>
        <active>true</active>
        <description>Record type used for a Student Records employee or process audit.</description>
        <label>Student Records</label>
    </recordTypes>
    <recordTypes>
        <fullName>TranscriptEvaluation</fullName>
        <active>true</active>
        <description>Record type used for a transcript/transfer evaluation employee or process audit.</description>
        <label>Transcript Evaluation</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>